second commit section project

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500&display=swap" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@700&display=swap" rel="stylesheet"type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,600;1,900&display=swap" rel="stylesheet"type="text/css">
